--- a/deep-learning/torch/quickstart.ipynb
+++ b/deep-learning/torch/quickstart.ipynb
@@ -1,17 +1,505 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d1fceb8e-a44c-4848-94fc-2a0d73d7f330",
+   "metadata": {},
+   "source": [
+    "# PyTorch Quickstart\n",
+    "\n",
+    "Quick start from [PyTorch's tutorial](https://pytorch.org/tutorials/beginner/basics/quickstart_tutorial.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb98b55a-d031-4bbe-ab85-7656d66bf6d3",
+   "metadata": {},
+   "source": [
+    "This section runs through the API for common tasks in machine learning. Refer to the links in each section to dive deeper.\n",
+    "\n",
+    "## Working with data\n",
+    "\n",
+    "PyTorch has two primitives to work with data: torch.utils.data.DataLoader and torch.utils.data.Dataset. Dataset stores the samples and their corresponding labels, and DataLoader wraps an iterable around the Dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aef71e7b",
+   "execution_count": 1,
+   "id": "24ca7cfa-6131-49d3-80be-a00b9491267a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Welcome to the quickstart notebook!')"
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision import datasets\n",
+    "from torchvision.transforms import ToTensor"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88cb3b78-be12-433a-83ea-90c914d89708",
+   "metadata": {},
+   "source": [
+    "PyTorch offers domain-specific libraries such as TorchText, TorchVision, and TorchAudio, all of which include datasets. For this tutorial, we will be using a TorchVision dataset.\n",
+    "\n",
+    "The torchvision.datasets module contains Dataset objects for many real-world vision data like CIFAR, COCO (full list here). In this tutorial, we use the FashionMNIST dataset. Every TorchVision Dataset includes two arguments: transform and target_transform to modify the samples and labels respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3c528281-9e2a-4292-ae38-935ea2d2c603",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download training data from open datasets.\n",
+    "training_data = datasets.FashionMNIST(\n",
+    "    root=\"data\",\n",
+    "    train=True,\n",
+    "    download=True,\n",
+    "    transform=ToTensor(),\n",
+    ")\n",
+    "\n",
+    "# Download test data from open datasets.\n",
+    "test_data = datasets.FashionMNIST(\n",
+    "    root=\"data\",\n",
+    "    train=False,\n",
+    "    download=True,\n",
+    "    transform=ToTensor(),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ea56635-11a4-48cc-a3bf-07d23aa833aa",
+   "metadata": {},
+   "source": [
+    "We pass the Dataset as an argument to DataLoader. This wraps an iterable over our dataset, and supports automatic batching, sampling, shuffling and multiprocess data loading. Here we define a batch size of 64, i.e. each element in the dataloader iterable will return a batch of 64 features and labels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "00b55ad9-a158-4aec-b62e-b5b4952ac5ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of X [N, C, H, W]: torch.Size([64, 1, 28, 28])\n",
+      "Shape of y: torch.Size([64]) torch.int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 64\n",
+    "\n",
+    "# Create data loaders.\n",
+    "train_dataloader = DataLoader(training_data, batch_size=batch_size)\n",
+    "test_dataloader = DataLoader(test_data, batch_size=batch_size)\n",
+    "\n",
+    "for X, y in test_dataloader:\n",
+    "    print(f\"Shape of X [N, C, H, W]: {X.shape}\")\n",
+    "    print(f\"Shape of y: {y.shape} {y.dtype}\")\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe5da7bc-4c07-4f7f-8ad4-f159c545d589",
+   "metadata": {},
+   "source": [
+    "## Creating Models\n",
+    "\n",
+    "To define a neural network in PyTorch, we create a class that inherits from nn.Module. We define the layers of the network in the __init__ function and specify how data will pass through the network in the forward function. To accelerate operations in the neural network, we move it to the GPU or MPS if available."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "abc14346-a325-41c3-948a-1e26688f8242",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cuda device\n",
+      "NeuralNetwork(\n",
+      "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
+      "  (linear_relu_stack): Sequential(\n",
+      "    (0): Linear(in_features=784, out_features=512, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=512, out_features=512, bias=True)\n",
+      "    (3): ReLU()\n",
+      "    (4): Linear(in_features=512, out_features=10, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get cpu, gpu or mps device for training.\n",
+    "device = (\n",
+    "    \"cuda\"\n",
+    "    if torch.cuda.is_available()\n",
+    "    else \"mps\"\n",
+    "    if torch.backends.mps.is_available()\n",
+    "    else \"cpu\"\n",
+    ")\n",
+    "print(f\"Using {device} device\")\n",
+    "\n",
+    "# Define model\n",
+    "class NeuralNetwork(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.flatten = nn.Flatten()\n",
+    "        self.linear_relu_stack = nn.Sequential(\n",
+    "            nn.Linear(28*28, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512, 10)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.flatten(x)\n",
+    "        logits = self.linear_relu_stack(x)\n",
+    "        return logits\n",
+    "\n",
+    "model = NeuralNetwork().to(device)\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdd7042a-f61c-4399-b3a3-4bac641cf8ee",
+   "metadata": {},
+   "source": [
+    "## Optimizing the Model Parameters\n",
+    "\n",
+    "To train a model, we need a loss function and an optimizer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fd986075-f5d3-4f68-9f75-026dd66d6175",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=1e-3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16e7a423-fc99-488c-94e5-79e0b0a0a61c",
+   "metadata": {},
+   "source": [
+    "In a single training loop, the model makes predictions on the training dataset (fed to it in batches), and backpropagates the prediction error to adjust the model’s parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1c6862ca-9113-4fa4-96e7-c0d16756cfda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(dataloader, model, loss_fn, optimizer):\n",
+    "    size = len(dataloader.dataset)\n",
+    "    model.train()\n",
+    "    for batch, (X, y) in enumerate(dataloader):\n",
+    "        X, y = X.to(device), y.to(device)\n",
+    "\n",
+    "        # Compute prediction error\n",
+    "        pred = model(X)\n",
+    "        loss = loss_fn(pred, y)\n",
+    "\n",
+    "        # Backpropagation\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        if batch % 100 == 0:\n",
+    "            loss, current = loss.item(), (batch + 1) * len(X)\n",
+    "            print(f\"loss: {loss:>7f}  [{current:>5d}/{size:>5d}]\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "219c9197-acc6-439f-9fad-f14666153c85",
+   "metadata": {},
+   "source": [
+    "We also check the model’s performance against the test dataset to ensure it is learning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "937265e8-4901-43c0-88c2-c17fe84b714b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(dataloader, model, loss_fn):\n",
+    "    size = len(dataloader.dataset)\n",
+    "    num_batches = len(dataloader)\n",
+    "    model.eval()\n",
+    "    test_loss, correct = 0, 0\n",
+    "    with torch.no_grad():\n",
+    "        for X, y in dataloader:\n",
+    "            X, y = X.to(device), y.to(device)\n",
+    "            pred = model(X)\n",
+    "            test_loss += loss_fn(pred, y).item()\n",
+    "            correct += (pred.argmax(1) == y).type(torch.float).sum().item()\n",
+    "    test_loss /= num_batches\n",
+    "    correct /= size\n",
+    "    print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>8f} \\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad3a0f31-94fd-479e-b256-c0af56a00813",
+   "metadata": {},
+   "source": [
+    "The training process is conducted over several iterations (epochs). During each epoch, the model learns parameters to make better predictions. We print the model’s accuracy and loss at each epoch; we’d like to see the accuracy increase and the loss decrease with every epoch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4cf627cc-5bf3-4fda-8964-3c45d1dc2350",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1\n",
+      "-------------------------------\n",
+      "loss: 2.290982  [   64/60000]\n",
+      "loss: 2.279257  [ 6464/60000]\n",
+      "loss: 2.262030  [12864/60000]\n",
+      "loss: 2.260556  [19264/60000]\n",
+      "loss: 2.233535  [25664/60000]\n",
+      "loss: 2.206545  [32064/60000]\n",
+      "loss: 2.219954  [38464/60000]\n",
+      "loss: 2.180609  [44864/60000]\n",
+      "loss: 2.180419  [51264/60000]\n",
+      "loss: 2.146947  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 45.5%, Avg loss: 2.139284 \n",
+      "\n",
+      "Epoch 2\n",
+      "-------------------------------\n",
+      "loss: 2.147786  [   64/60000]\n",
+      "loss: 2.131883  [ 6464/60000]\n",
+      "loss: 2.068822  [12864/60000]\n",
+      "loss: 2.092757  [19264/60000]\n",
+      "loss: 2.026004  [25664/60000]\n",
+      "loss: 1.972421  [32064/60000]\n",
+      "loss: 2.006126  [38464/60000]\n",
+      "loss: 1.917605  [44864/60000]\n",
+      "loss: 1.918566  [51264/60000]\n",
+      "loss: 1.850373  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 56.5%, Avg loss: 1.842645 \n",
+      "\n",
+      "Epoch 3\n",
+      "-------------------------------\n",
+      "loss: 1.871926  [   64/60000]\n",
+      "loss: 1.835702  [ 6464/60000]\n",
+      "loss: 1.711538  [12864/60000]\n",
+      "loss: 1.766857  [19264/60000]\n",
+      "loss: 1.652508  [25664/60000]\n",
+      "loss: 1.614706  [32064/60000]\n",
+      "loss: 1.641235  [38464/60000]\n",
+      "loss: 1.546204  [44864/60000]\n",
+      "loss: 1.564290  [51264/60000]\n",
+      "loss: 1.464266  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 62.2%, Avg loss: 1.485372 \n",
+      "\n",
+      "Epoch 4\n",
+      "-------------------------------\n",
+      "loss: 1.545818  [   64/60000]\n",
+      "loss: 1.513414  [ 6464/60000]\n",
+      "loss: 1.366773  [12864/60000]\n",
+      "loss: 1.446998  [19264/60000]\n",
+      "loss: 1.334433  [25664/60000]\n",
+      "loss: 1.334244  [32064/60000]\n",
+      "loss: 1.346142  [38464/60000]\n",
+      "loss: 1.283178  [44864/60000]\n",
+      "loss: 1.312337  [51264/60000]\n",
+      "loss: 1.207445  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 63.6%, Avg loss: 1.242091 \n",
+      "\n",
+      "Epoch 5\n",
+      "-------------------------------\n",
+      "loss: 1.312956  [   64/60000]\n",
+      "loss: 1.294452  [ 6464/60000]\n",
+      "loss: 1.137029  [12864/60000]\n",
+      "loss: 1.243090  [19264/60000]\n",
+      "loss: 1.125422  [25664/60000]\n",
+      "loss: 1.151305  [32064/60000]\n",
+      "loss: 1.166134  [38464/60000]\n",
+      "loss: 1.117843  [44864/60000]\n",
+      "loss: 1.153565  [51264/60000]\n",
+      "loss: 1.055494  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 64.5%, Avg loss: 1.087867 \n",
+      "\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "epochs = 5\n",
+    "for t in range(epochs):\n",
+    "    print(f\"Epoch {t+1}\\n-------------------------------\")\n",
+    "    train(train_dataloader, model, loss_fn, optimizer)\n",
+    "    test(test_dataloader, model, loss_fn)\n",
+    "print(\"Done!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fc116a5-e686-4473-8871-6c0ab359464b",
+   "metadata": {},
+   "source": [
+    "## Saving Models\n",
+    "\n",
+    "A common way to save a model is to serialize the internal state dictionary (containing the model parameters)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3eef0bc1-66f8-4143-89a6-9171480d1907",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved PyTorch Model State to model.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.save(model.state_dict(), \"model.pth\")\n",
+    "print(\"Saved PyTorch Model State to model.pth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79e5aa26-ed7b-4ab6-ae08-d6741e1b4328",
+   "metadata": {},
+   "source": [
+    "## Loading Models\n",
+    "\n",
+    "The process for loading a model includes re-creating the model structure and loading the state dictionary into it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d92d17fd-ab2c-40bd-9b33-033b5a3c7dfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = NeuralNetwork().to(device)\n",
+    "model.load_state_dict(torch.load(\"model.pth\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2752390-a5de-4835-8947-c0e4bb1a7d05",
+   "metadata": {},
+   "source": [
+    "This model can now be used to make predictions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ec7844c7-497e-46f5-9aec-5324874b43b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted: \"Ankle boot\", Actual: \"Ankle boot\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "classes = [\n",
+    "    \"T-shirt/top\",\n",
+    "    \"Trouser\",\n",
+    "    \"Pullover\",\n",
+    "    \"Dress\",\n",
+    "    \"Coat\",\n",
+    "    \"Sandal\",\n",
+    "    \"Shirt\",\n",
+    "    \"Sneaker\",\n",
+    "    \"Bag\",\n",
+    "    \"Ankle boot\",\n",
+    "]\n",
+    "\n",
+    "model.eval()\n",
+    "x, y = test_data[0][0], test_data[0][1]\n",
+    "with torch.no_grad():\n",
+    "    x = x.to(device)\n",
+    "    pred = model(x)\n",
+    "    predicted, actual = classes[pred[0].argmax(0)], classes[y]\n",
+    "    print(f'Predicted: \"{predicted}\", Actual: \"{actual}\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d19ec8d-20a8-4c3c-b810-f6d401a60285",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.8"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
