--- a/deep-learning/huggingface/quickstart.ipynb
+++ b/deep-learning/huggingface/quickstart.ipynb
@@ -1,17 +1,119 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hugging Face Quickstart\n",
+    "\n",
+    "Load and run inference locally on Microsoft's lightweight language model: Phi-3-Mini-128K-Instruct."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Load your model and tokenizer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aef71e7b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Welcome to the quickstart notebook!')"
+    "import torch\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline, TextStreamer\n",
+    "\n",
+    "torch.random.manual_seed(0)\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    \"microsoft/Phi-3-mini-128k-instruct\", \n",
+    "    device_map=\"cuda\", \n",
+    "    torch_dtype=\"auto\", \n",
+    "    trust_remote_code=True, \n",
+    ")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"microsoft/Phi-3-mini-128k-instruct\")\n",
+    "streamer = TextStreamer(tokenizer)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Configure pipeline for text generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe = pipeline(\n",
+    "    \"text-generation\",\n",
+    "    model=model,\n",
+    "    tokenizer=tokenizer,\n",
+    ")\n",
+    "\n",
+    "generation_args = {\n",
+    "    \"max_new_tokens\": 500,\n",
+    "    \"return_full_text\": False,\n",
+    "    \"temperature\": 0.0,\n",
+    "    \"do_sample\": False,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Prompt and message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages = [\n",
+    "    {\"role\": \"user\", \"content\": \"Can you provide ways to eat combinations of bananas and dragonfruits?\"},\n",
+    "    {\"role\": \"assistant\", \"content\": \"Sure! Here are some ways to eat bananas and dragonfruits together: 1. Banana and dragonfruit smoothie: Blend bananas and dragonfruits together with some milk and honey. 2. Banana and dragonfruit salad: Mix sliced bananas and dragonfruits together with some lemon juice and honey.\"},\n",
+    "    {\"role\": \"user\", \"content\": \"What about solving an 2x + 3 = 7 equation?\"},\n",
+    "]\n",
+    "\n",
+    "output = pipe(messages, streamer=streamer, **generation_args)\n",
+    "print(output[0]['generated_text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.8"
+  }
+ },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
