--- a/other/latex/quickstart.ipynb
+++ b/other/latex/quickstart.ipynb
@@ -7,11 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Welcome to the quickstart notebook!')"
+    "print(\"Work in Progress. Feel free to contribute to the quickstart notebook!\")"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
