Fix typo and chroma delete

--- a/vector-databases/milvus/quickstart.ipynb
+++ b/vector-databases/milvus/quickstart.ipynb
@@ -178,7 +178,7 @@
    "id": "57de54d2-b352-4078-8162-11a6af1252aa",
    "metadata": {},
    "source": [
-    "## 7. Check the that vectors were inserted to che collection"
+    "## 7. Check the that vectors were inserted to the collection"
    ]
   },
   {
