--- a/vector-databases/chroma/quickstart.ipynb
+++ b/vector-databases/chroma/quickstart.ipynb
@@ -175,7 +175,7 @@
    "id": "57de54d2-b352-4078-8162-11a6af1252aa",
    "metadata": {},
    "source": [
-    "## 7. Check the that vectors were inserted to che collection"
+    "## 7. Check the that vectors were inserted to the collection"
    ]
   },
   {
@@ -263,8 +263,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.drop_collection(\n",
-    "    collection_name=collection_name\n",
+    "client.delete_collection(\n",
+    "    collection_name\n",
     ")"
    ]
   },
