--- a/data-visualization/dash/quickstart.ipynb
+++ b/data-visualization/dash/quickstart.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print("Work in Progress. Feel free to contribute to the quickstart notebook!")"
+    "print('Work in Progress. Feel free to contribute to the quickstart notebook!')"
    ]
   }
  ],
